mcSubSolve Subtraction parts

--- a/HTML/mcAdd.html
+++ b/HTML/mcAdd.html
@@ -2,14 +2,14 @@
 <html>
 <head>
     <meta name="keywords" content="">
-    <meta name="description" content="">	
+    <meta name="description" content="">
     <meta name="author" content="">
     <meta charset="UTF-8">
 	<script src="../js/mcAdd.js"></script>
 </head>
-<body>	
-    <p>Enter Value</p>
-	<input type="text" id="in1" value="">
+<body>
+  <p>Enter Value</p>
+	<input type="text" id="in1" value="" autofocus>
 	<input type="text" id="in2" value="">
 	<input type="button" value="Click" onclick="start()">	<p id="show"></p>
 
