mcSubSection.js not work properly

--- a/HTML/mcSubSection.html
+++ b/HTML/mcSubSection.html
@@ -6,6 +6,7 @@
     <meta name="author" content="Uvraag">
     <meta charset="UTF-8">
 	<script src="../js/mcSubSolve.js"></script>
+	<script src="../js/mcSubSection.js"></script>
 </head>
 <body>
   <p>Enter Value</p>
@@ -15,7 +16,7 @@
 
 <script>
 function start(){
-    var temp = mcSubSolve( document.getElementById( "in1" ).value, document.getElementById( "in2" ).value );
+    var temp = mcSubSection( document.getElementById( "in1" ).value, document.getElementById( "in2" ).value );
 document.getElementById( "show" ).innerHTML = temp;
 }
 </script>
