--- a/HTML/mcSubSection.html
+++ b/HTML/mcSubSection.html
@@ -12,7 +12,7 @@
   <p>Enter Value</p>
 	<input type="text" id="in1" value="" autofocus>
 	<input type="text" id="in2" value="">
-	<input type="button" value="Click" onclick="start()">	<p id="show"></p>
+	<input type="button" value="Click" onclick="start()">	<p id="show" style="font-size:50px"></p>
 
 <script>
 function start(){
