--- a/HTML/mcAdd.html
+++ b/HTML/mcAdd.html
@@ -5,6 +5,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <meta charset="UTF-8">
+	<script src="../js/mcAddSection.js"></script>
 	<script src="../js/mcAdd.js"></script>
 </head>
 <body>
