uvraag, zero solved

--- a/HTML/mcAdd.html
+++ b/HTML/mcAdd.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="keywords" content="">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Uvraag">
     <meta charset="UTF-8">
 	<script src="../js/mcAddSection.js"></script>
 	<script src="../js/mcAdd.js"></script>
