Two -ve number is working add

--- a/HTML/mcAdd.html
+++ b/HTML/mcAdd.html
@@ -16,7 +16,7 @@
 
 <script>
 function start(){
-    var temp = mcAdd( document.getElementById( "in1" ).value, document.getElementById( "in2" ).value );
+    var temp = mcAddSection( document.getElementById( "in1" ).value, document.getElementById( "in2" ).value );
 document.getElementById( "show" ).innerHTML = temp;
 }
 </script>
