first +ve second -ve add work

--- a/HTML/mcAdd.html
+++ b/HTML/mcAdd.html
@@ -7,6 +7,8 @@
     <meta charset="UTF-8">
 	<script src="../js/mcAddSection.js"></script>
 	<script src="../js/mcAdd.js"></script>
+    <script src="../js/mcSubSolve.js"></script>
+	<script src="../js/mcSubSection.js"></script>
 </head>
 <body>
   <p>Enter Value</p>
