--- a/HTML/mcSub.html
+++ b/HTML/mcSub.html
@@ -5,6 +5,8 @@
     <meta name="description" content="">
     <meta name="author" content="Uvraag">
     <meta charset="UTF-8">
+    <script src="../js/mcAddSection.js"></script>
+    <script src="../js/mcAdd.js"></script>
 	<script src="../js/mcSubSolve.js"></script>
 	<script src="../js/mcSubSection.js"></script>
 </head>
