Add <meta> viewport
<meta name="viewport" content="width=device-width, initial-scale=1">

--- a/HTML/mcAdd.html
+++ b/HTML/mcAdd.html
@@ -5,6 +5,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="Uvraag">
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="../js/mcAddSection.js"></script>
 	<script src="../js/mcAdd.js"></script>
 	<script src="../js/mcSubSolve.js"></script>
