--- a/HTML/mcPow.html
+++ b/HTML/mcPow.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <meta name="author" content="Uvraag">
-    <meta charset="UTF-8">
+   <meta name="keywords" content="">
+   <meta name="description" content="">
+   <meta name="author" content="Uvraag">
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="../js/mcAddSection.js"></script>
 	<script src="../js/mcAdd.js"></script>
 	<script src="../js/mcMulOne.js"></script>
