Replace type text to number
type="text" to type="number"

--- a/HTML/mcPow.html
+++ b/HTML/mcPow.html
@@ -15,8 +15,8 @@
 </head>
 <body>
   <p>Enter Value</p>
-	<input type="text" id="in1" value="" autofocus>
-	<input type="text" id="in2" value="">
+	<input type="number" id="in1" value="" autofocus>
+	<input type="number" id="in2" value="">
 	<input type="button" value="Click" onclick="start()">	<p id="show" style="font-size:50px"></p>
 
 <script>
