--- a/HTML/mcFact.html
+++ b/HTML/mcFact.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <p>Enter Value</p>
-	<input type="text" id="in1" value="" autofocus>
+	<input type="number" id="in1" value="" autofocus>
 	<input type="button" value="Click" onclick="start()">	<p id="show" style="font-size:50px"></p>
 
 <script>
