--- a/HTML/mcDiv.html
+++ b/HTML/mcDiv.html
@@ -13,8 +13,8 @@
 	<p>Enter Value</p>
 	<input type="number" id="in1" value="" autofocus>
 	<input type="number" id="in2" value="">
-	<input type="button" value="Click" onclick="start()">	<p id="show" style="font-size:50px"></p>
-
+	<input type="button" value="Click" onclick="start()">
+	<p id="show" style="font-size:50px"></p>
 <script>
 function start(){
 	var temp = mcDiv( document.getElementById( "in1" ).value, document.getElementById( "in2" ).value );
