--- a/HTML/mcFact.html
+++ b/HTML/mcFact.html
@@ -16,8 +16,8 @@
 <body>
   <p>Enter Value</p>
 	<input type="number" id="in1" value="" autofocus>
-	<input type="button" value="Click" onclick="start()">	<p id="show" style="font-size:50px"></p>
-
+	<input type="button" value="Click" onclick="start()">
+   <p id="show" style="font-size:50px"></p>
 <script>
 function start(){
     var temp = mcFact( document.getElementById( "in1" ).value );
