add plugin all func.
remove <script src="../js/math-code.js"></script>
ADD all function

--- a/HTML/math-code.html
+++ b/HTML/math-code.html
@@ -7,7 +7,16 @@
 <link rel="stylesheet" href="../css/w3-theme-teal.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<script src="../js/math-code.js"></script>
+<script src="../js/mcAddSection.js"></script>
+<script src="../js/mcAdd.js"></script>
+<script src="../js/mcSubSolve.js"></script>
+<script src="../js/mcSubSection.js"></script>
+<script src="../js/mcMulOne.js"></script>
+<script src="../js/mcMulSection.js"></script>
+<script src="../js/mcMul.js"></script>
+<script src="../js/mcFact.js"></script>
+<script src="../js/mcPow.js"></script>
+
 <style>
    body {
       font-family: "Roboto", sans-serif
