--- a/HTML/isNeq.html
+++ b/HTML/isNeq.html
@@ -8,6 +8,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <script src="../js/isEq.js"></script>
    <script src="../js/isNeq.js"></script>
+   <title>Not Equal</title>
 </head>
 <body>
    <p>Enter Value</p>
