--- a/HTML/mcAdd.html
+++ b/HTML/mcAdd.html
@@ -10,6 +10,7 @@
 	<script src="../js/mcAdd.js"></script>
 	<script src="../js/mcSubSolve.js"></script>
 	<script src="../js/mcSubSection.js"></script>
+	<title>Addition</title>
 </head>
 <body>
 	<p>Enter Value</p>
