--- a/HTML/mcFact.html
+++ b/HTML/mcFact.html
@@ -12,6 +12,7 @@
 	<script src="../js/mcMulSection.js"></script>
 	<script src="../js/mcMul.js"></script>
 	<script src="../js/mcFact.js"></script>
+   <title>Factorial</title>
 </head>
 <body>
   <p>Enter Value</p>
