--- a/HTML/mcMul.html
+++ b/HTML/mcMul.html
@@ -10,6 +10,7 @@
 	<script src="../js/mcAdd.js"></script>
 	<script src="../js/mcMulOne.js"></script>
 	<script src="../js/mcMulSection.js"></script>
+   <title>Multiplication</title>
 </head>
 <body>
   <p>Enter Value</p>
