--- a/HTML/mcPow.html
+++ b/HTML/mcPow.html
@@ -12,6 +12,7 @@
 	<script src="../js/mcMulSection.js"></script>
 	<script src="../js/mcMul.js"></script>
 	<script src="../js/mcPow.js"></script>
+   <title>Power</title>
 </head>
 <body>
   <p>Enter Value</p>
