--- a/HTML/isEq.html
+++ b/HTML/isEq.html
@@ -7,12 +7,13 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="../js/isEq.js"></script>
+	<title>Equal</title>
 </head>
 <body>
 	<p>Enter Value</p>
 	<input type="number" id="in1" value="" autofocus>
 	<input type="number" id="in2" value="">
-	<input type="button" value="Click" onclick="start()">	
+	<input type="button" value="Click" onclick="start()">
 	<p id="show" style="font-size:50px"></p>
 <script>
 function start(){
