--- a/HTML/mcDiv.html
+++ b/HTML/mcDiv.html
@@ -7,6 +7,13 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="../js/mcDiv.js"></script>
+	<script src="../js/isGte.js"></script>
+	<script src="../js/isEq.js"></script>
+	<script src="../js/mcAddSection.js"></script>
+	<script src="../js/mcAdd.js"></script>
+	<script src="../js/mcMulOne.js"></script>
+	<script src="../js/mcMulSection.js"></script>
+	<script src="../js/mcMul.js"></script>
 	<title>Divide two number</title>
 </head>
 <body>
