Not perfect divisible possible

--- a/HTML/mcDiv.html
+++ b/HTML/mcDiv.html
@@ -7,10 +7,15 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="../js/mcDiv.js"></script>
+	<script src="../js/isGt.js"></script>
 	<script src="../js/isGte.js"></script>
 	<script src="../js/isEq.js"></script>
+	<script src="../js/isNeq.js"></script>
 	<script src="../js/mcAddSection.js"></script>
 	<script src="../js/mcAdd.js"></script>
+	<script src="../js/mcSubSolve.js"></script>
+	<script src="../js/mcSubSection.js"></script>
+	<script src="../js/mcSub.js"></script>
 	<script src="../js/mcMulOne.js"></script>
 	<script src="../js/mcMulSection.js"></script>
 	<script src="../js/mcMul.js"></script>
