--- a/HTML/mcDiv.html
+++ b/HTML/mcDiv.html
@@ -19,6 +19,7 @@
 	<script src="../js/mcMulOne.js"></script>
 	<script src="../js/mcMulSection.js"></script>
 	<script src="../js/mcMul.js"></script>
+	<script src="../../test/js/jQuery_v2.1.4.js"></script>
 	<title>Divide two number</title>
 </head>
 <body>
@@ -27,6 +28,7 @@
 	<input type="number" id="in2" value="">
 	<input type="button" value="Click" onclick="start()">
 	<p id="show" style="font-size:50px"></p>
+	<p id="show1" style="font-size:50px"></p>
 <script>
 function start(){
 	var temp = mcDiv( document.getElementById( "in1" ).value, document.getElementById( "in2" ).value );
