--- a/HTML/mcDiv.html
+++ b/HTML/mcDiv.html
@@ -6,6 +6,7 @@
 	<meta name="author" content="Uvraag">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="../../math-code/css/w3-4.css">
 	<script src="../js/mcDiv.js"></script>
 	<script src="../js/isGt.js"></script>
 	<script src="../js/isGte.js"></script>
@@ -28,7 +29,18 @@
 	<input type="number" id="in2" value="">
 	<input type="button" value="Click" onclick="start()">
 	<p id="show" style="font-size:50px"></p>
-	<p id="show1" style="font-size:50px"></p>
+<!--
+	<div class="w3-container">
+		<div class="w3-row">
+			<ul id="oi" class="w3-ul w3-col l6 m6 s6">
+				<li>OI</li>
+			</ul>
+			<ul id="po" class="w3-ul w3-col l6 m6 s6">
+				<li>PO</li>
+			</ul>
+		</div>
+	</div>
+-->
 <script>
 function start(){
 	var temp = mcDiv( document.getElementById( "in1" ).value, document.getElementById( "in2" ).value );
