--- a/HTML/mcDiv1.html
+++ b/HTML/mcDiv1.html
@@ -25,7 +25,7 @@
 	<title>Divide two number</title>
 </head>
 <body>
-	<p>Enter Value</p>
+	<p>Enter Value (mcDiv1)</p>
 	<input type="number" id="in1" value="" autofocus>
 	<input type="number" id="in2" value="">
 	<input type="button" value="Click" onclick="start()">
