--- a/HTML/isDivisible.html
+++ b/HTML/isDivisible.html
@@ -24,7 +24,7 @@
 	<title></title>
 </head>
 <body>
-	<p>Enter Value</p>
+	<p>Enter Value (isDivisible)</p>
 	<input type="number" id="in1" value="" autofocus>
 	<input type="number" id="in2" value="">
 	<input type="button" value="Click" onclick="start()">
