--- a/HTML/mcDiv.html
+++ b/HTML/mcDiv.html
@@ -24,7 +24,7 @@
 	<title>Divide two number</title>
 </head>
 <body>
-	<p>Enter Value</p>
+	<p>Enter Value (mcDiv)</p>
 	<input type="number" id="in1" value="" autofocus>
 	<input type="number" id="in2" value="">
 	<input type="button" value="Click" onclick="start()">
