--- a/HTML/mcDiv1.html
+++ b/HTML/mcDiv1.html
@@ -6,7 +6,7 @@
 	<meta name="author" content="Uvraag">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="../../math-code/css/w3-4.css">
+	<link rel="stylesheet" href="../css/w3-4.css">
 	<script src="../js/mcDiv1.js"></script>
 	<script src="../js/isGt.js"></script>
 	<script src="../js/isGte.js"></script>
