--- a/HTML/mcDiv1.html
+++ b/HTML/mcDiv1.html
@@ -21,7 +21,7 @@
 	<script src="../js/mcMulOne.js"></script>
 	<script src="../js/mcMulSection.js"></script>
 	<script src="../js/mcMul.js"></script>
-	<script src="../../test/js/jQuery_v2.1.4.js"></script>
+	<script src="../js/jQuery_v2.1.4.js"></script>
 	<title>Divide two number</title>
 </head>
 <body>
