--- a/HTML/mcRem.html
+++ b/HTML/mcRem.html
@@ -20,11 +20,11 @@
 	<script src="../js/mcMulOne.js"></script>
 	<script src="../js/mcMulSection.js"></script>
 	<script src="../js/mcMul.js"></script>
-	<script src="../../test/js/jQuery_v2.1.4.js"></script>
+	<script src="../js/jQuery_v2.1.4.js"></script>
 	<title></title>
 </head>
 <body>
-	<p>Enter Value (isDivisible)</p>
+	<p>Enter Value (mcRem)</p>
 	<input type="number" id="in1" value="" autofocus>
 	<input type="number" id="in2" value="">
 	<input type="button" value="Click" onclick="start()">
@@ -43,7 +43,7 @@
 -->
 <script>
 function start(){
-	var temp = isDivisible( document.getElementById( "in1" ).value, document.getElementById( "in2" ).value );
+	var temp = mcRem( document.getElementById( "in1" ).value, document.getElementById( "in2" ).value );
 	document.getElementById( "show" ).innerHTML = temp;
 }
 </script>
