--- a/HTML/mcRem.html
+++ b/HTML/mcRem.html
@@ -20,27 +20,30 @@
 	<script src="../js/mcMulOne.js"></script>
 	<script src="../js/mcMulSection.js"></script>
 	<script src="../js/mcMul.js"></script>
+	<script src="../js/mcRem.js"></script>
 	<script src="../js/jQuery_v2.1.4.js"></script>
-	<title></title>
+	<title>Remainder</title>
 </head>
 <body>
-	<p>Enter Value (mcRem)</p>
-	<input type="number" id="in1" value="" autofocus>
-	<input type="number" id="in2" value="">
-	<input type="button" value="Click" onclick="start()">
-	<p id="show" style="font-size:50px"></p>
-<!--
 	<div class="w3-container">
-		<div class="w3-row">
-			<ul id="oi" class="w3-ul w3-col l6 m6 s6">
-				<li>OI</li>
-			</ul>
-			<ul id="po" class="w3-ul w3-col l6 m6 s6">
-				<li>PO</li>
-			</ul>
+		<p>Enter Value (mcRem)</p>
+		<input type="number" id="in1" value="" autofocus>
+		<input type="number" id="in2" value="">
+		<input type="button" value="Click" onclick="start()">
+		<p id="show" style="font-size:50px"></p>
+	<!--
+		<div class="w3-container">
+			<div class="w3-row">
+				<ul id="oi" class="w3-ul w3-col l6 m6 s6">
+					<li>OI</li>
+				</ul>
+				<ul id="po" class="w3-ul w3-col l6 m6 s6">
+					<li>PO</li>
+				</ul>
+			</div>
 		</div>
-	</div>
--->
+	-->
+</div>
 <script>
 function start(){
 	var temp = mcRem( document.getElementById( "in1" ).value, document.getElementById( "in2" ).value );
